2009-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-smb.el (tramp-smb-get-stat-capability): New defun.
	(tramp-smb-handle-file-attributes): Use it.
	(tramp-smb-do-file-attributes-with-stat): Don't raise an error.
	(tramp-smb-handle-insert-directory): Use `mapc' rather than
	`mapcar'.  Use `tramp-smb-get-stat-capability'.  Add
	`dired-filename' text properties.
	(tramp-smb-get-cifs-capabilities): Apply `save-match-data'.
	(tramp-smb-maybe-open-connection): Simplify check for smbclient
	version.

2009-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (read-key-delay): Reduce to 0.01.
	(read-key): Use read-key-sequence-vector to avoid turning M-t into 244
	(bug#4751).

2009-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* bindings.el (function-key-map): Map C-@ to C-SPC if C-@ is unbound.

	* info.el (Info-complete-menu-item): Handle `boundaries' explicitly.
	(Info-menu): Remove unused vars `last' and `completions'.
	(Info-index-nodes): Remove unused var `node'.

	* info.el (Info-complete-menu-item): Use complete-with-action.

2009-10-19  Dan Nicolaescu  <dann@ics.uci.edu>

	Make vc-annotate work through copies and renames.
	* vc-annotate.el (vc-annotate-extract-revision-at-line):
	Return the file name too.
	(vc-annotate-revision-at-line)
	(vc-annotate-find-revision-at-line)
	(vc-annotate-revision-previous-to-line)
	(vc-annotate-show-log-revision-at-line): Update to get the file
	name from vc-annotate-extract-revision-at-line.
	(vc-annotate-show-diff-revision-at-line-internal): Change the
	argument to mean whether to show a file diff or not.  Get the file
	name from vc-annotate-extract-revision-at-line.
	(vc-annotate-show-diff-revision-at-line):
	Update vc-annotate-show-diff-revision-at-line call.
	(vc-annotate-warp-revision): Add an optional file argument.

	* vc-git.el (vc-git-annotate-command): Pass -C -C to the blame command.
	(vc-git-annotate-extract-revision-at-line): Also return the file
	name if found.
